# moos-ivp-uidaho

./: CMakeLists.txt  CleanProject.sh  FixMOOSSerialPortGuard.diff  MakeMOOSApp.sh  README  README.md  build-clean.sh  build-gumstix.sh  build.sh  toolchain-gumstix-omap3.cmake
config/AppFactory/: CMakeLists.txt  main.cpp
config/AppFactory/config/: AppVersion.h.in
projects/: CMakeLists.txt
projects/BHV_ReverseDive/: BHV_ReverseDive.cpp  BHV_ReverseDive.h  CMakeLists.txt  README.txt
projects/BHV_ReverseDive/config/: config.h.in  manfile.in
projects/iArchangelIMU/: CMakeLists.txt  README.txt  iArchangelIMU.moos
projects/iArchangelIMU/Matlab/: AHRSMessage.m  GenerateImuPackets.m  IMUMessage.m  ToSerialBytes.m
projects/iArchangelIMU/config/: manfile.in
projects/iArchangelIMU/include/: IMU3Module.h  iArchangelIMU.h
projects/iArchangelIMU/src/: IMU3Module.cpp  iArchangelIMU.cpp  main.cpp
projects/iBSDuC/: CMakeLists.txt  README.txt  iBSDuC.moos
projects/iBSDuC/include/: ActuatorController.h  BSDuCModule.h  BSDuCStartupFSM.h  BSDuC_parapet_packets.h  ParapetSerialDeviceNode.h  iBSDuC.h
projects/iBSDuC/src/: ActuatorController.cpp  BSDuCModule.cpp  BSDuCStartupFSM.cpp  ParapetSerialDeviceNode.cpp  iBSDuC.cpp  main.cpp
projects/iBSDuC/test/: BSDuCStartupFSM_test.cpp
projects/iGPSd/: CMakeLists.txt  README  iGPSd.moos
projects/iGPSd/config/: manfile.in
projects/iGPSd/include/: iGPSd.h
projects/iGPSd/src/: iGPSd.cpp  main.cpp
projects/iRevolutionCompass/: CMakeLists.txt  README.txt  iRevolutionCompass.moos
projects/iRevolutionCompass/config/: manfile.in
projects/iRevolutionCompass/include/: RevolutionCompassModule.h  iRevolutionCompass.h
projects/iRevolutionCompass/src/: RevolutionCompassModule.cpp  iRevolutionCompass.cpp  main.cpp
projects/iScotty/: CMakeLists.txt  README  iScotty.moos
projects/iScotty/config/: manfile.in
projects/iScotty/include/: ActuatorPID.h  PitchController.h  ScottyModule.h  iScotty.h
projects/iScotty/src/: ActuatorPID.cpp  PitchController.cpp  ScottyModule.cpp  iScotty.cpp  main.cpp
projects/iScotty/test/: AuvConfig.cfg
projects/iSpock/: CMakeLists.txt  README  iSpock.moos
projects/iSpock/config/: manfile.in
projects/iSpock/include/: SpockModule.h  iSpock.h
projects/iSpock/src/: SpockModule.cpp  iSpock.cpp  main.cpp
projects/iWhoiMicroModem/: CMakeLists.txt  README  iWhoiMicroModem.moos
projects/iWhoiMicroModem/config/: manfile.in
projects/iWhoiMicroModem/include/: QueuedCommandEvent.h  WhoiCommandManager.h  iWhoiMicroModem.h
projects/iWhoiMicroModem/src/: QueuedCommandEvent.cpp  WhoiCommandManager.cpp  iWhoiMicroModem.cpp  main.cpp
projects/iXStreamRadioModem/: CMakeLists.txt  README  WorkingRadioModemProfile.pro  iXStreamRadioModem.moos
projects/iXStreamRadioModem/include/: AuvControlPanelClient.h  iXStreamRadioModem.h
projects/iXStreamRadioModem/src/: AuvControlPanelClient.cpp  iXStreamRadioModem.cpp  main.cpp
projects/iYellowSubDAQ/: CMakeLists.txt  iYellowSubDAQ.moos
projects/iYellowSubDAQ/config/: manfile.in
projects/iYellowSubDAQ/include/: YellowSubDAQModule.h  iYellowSubDAQ.h
projects/iYellowSubDAQ/src/: YellowSubDAQModule.cpp  iYellowSubDAQ.cpp  main.cpp
projects/lib_BunnySock/: CMakeLists.txt
projects/lib_BunnySock/include/: BunnySockListener.h  BunnySockListenerFIFO.h  BunnySockNode.h  BunnySockPacket.h  BunnySockTcpNode.h  BunnySockUdpNode.h  FileSelector.h  LibBunnySock.h  UAVnet_PacketTypes.h  XPTcpSocketEx.h  sockets.h
projects/lib_BunnySock/libBunnySockTest/: CMakeLists.txt  LibBunnySockTest.cpp  LibBunnySockTest.h  LibBunnySock_main.cpp
projects/lib_BunnySock/src/: BunnySockListenerFIFO.cpp  BunnySockNode.cpp  BunnySockPacket.cpp  BunnySockTcpNode.cpp  BunnySockUdpNode.cpp  FileSelector.cpp  LibBunnySock.cpp  XPTcpSocketEx.cpp  sockets.cpp  sockets.h
projects/lib_BunnySock/test/: CMakeLists.txt  test_address_info.cpp
projects/lib_Newmat10/: CMakeLists.txt
projects/lib_Newmat10/include/: include.h
projects/lib_YellowSubNav/: CMakeLists.txt  README.txt
projects/lib_YellowSubNav/VehicleEKFTest/: CMakeLists.txt  Kalman_lib.cpp  Kalman_lib.h  README.txt  RunningStatistics.h  UAVNetPacket .cpp  UAVNetPacket.h  UAV_PACKET_TYPES.h  VehicleEKFTest.cpp
projects/lib_YellowSubNav/include/: EKF.h  LblBeacon.h  LblPositionEstimator.h  LibYellowSubNav.h  VehicleEKF.h
projects/lib_YellowSubNav/src/: EKF.cpp  LblBeacon.cpp  LblPositionEstimator.cpp  VehicleEKF.cpp
projects/lib_YellowSubUtils/: CMakeLists.txt
projects/lib_YellowSubUtils/include/: DSPFilter.h  DSPFilterParameters.h  DebugFileSerialPort.h  FIRFilter.h  LinuxSerialPortEx.h  MOOSDBDoubleProxy.h  MOOSDBProxyCollection.h  MOOSDBStringProxy.h  MOOSDBVariableProxy.h  MockSerialPort.h  PolyphaseFIRDecimator.h  PrecisionTime.h  ScalarPIDController.h  Semaphore.h  StringUtilities.h  TimedLock.h  WindowedAverage.h  YellowSubUtils.h
projects/lib_YellowSubUtils/src/: DebugFileSerialPort.cpp  LinuxSerialPortEx.cpp  MOOSDBDoubleProxy.cpp  MOOSDBProxyCollection.cpp  MOOSDBStringProxy.cpp  MOOSDBVariableProxy.cpp  MockSerialPort.cpp  PrecisionTime.cpp  ScalarPIDController.cpp  Semaphore.cpp  StringUtilities.cpp  TimedLock.cpp
projects/lib_YellowSubUtils/test/: CMakeLists.txt  UT_DebugFileSerialPort.cpp  UT_FIRFilter.cpp  UT_PolyphaseFIRDecimator.cpp  UT_ScalarPIDController.cpp  UT_StringUtilities.cpp  UT_WindowedAverage.cpp
projects/lib_parapet/: CMakeLists.txt
projects/lib_parapet/include/: ParapetDeviceNode.h  ParapetEventBroadcaster.h  ParapetListener.h  ParapetMaster.h  ParapetPacketFIFO.h  ParapetSlave.h  parapet.h  parapet_callbacks.h  parapet_config.h  parapet_descriptor.h  parapet_node.h  (+1 more)
projects/pAcousticCommsAgent/: CMakeLists.txt  README  pAcousticCommsAgent.moos
projects/pFakeModemReport/: CMakeLists.txt  README  pFakeModemReport.moos
projects/pMissionMonitor/: CMakeLists.txt  README  pMissionMonitor.moos
projects/pVehicleEKF/: CMakeLists.txt  README  pVehicleEKF.moos
projects/pVehicleID/: CMakeLists.txt  README  pVehicleID.moos
projects/uGeodesy/: CMakeLists.txt  README  uGeodesy.moos
(+66 files in other folders)
